# Pizza

./: .coverage  .gitignore  AUFGABE_2_3_SUMMARY.md  CHANGELOG.md  COMPLETED_TASKS.md  Dockerfile.spatial  FINAL_PROJECT_COMPLETION.md  MODELL-1.2_COMPLETION_REPORT.md  PERF-4.1_COMPLETION_REPORT.md  PROJECT_STATUS.txt  README.md  SPATIAL-4.1_INTEGRATION_REPORT.md  SPATIAL-4.2-COMPLETION-REPORT-FINAL.md  SPATIAL-5.2_COMPLETION_REPORT.md  SPATIAL-6.2_COMPLETION_REPORT.md  TASK_VERIFICATION_COMPLETION_REPORT.md  analyze_class_distribution.py  aufgaben.txt  aufgaben2.txt  aufgaben3.txt  balance_dataset_enhanced.py  chatlist_ki.db  code_citations.md  docker-compose.override.yml  docker-compose.yml  emulator-test.py  emulator.py  error_report.md  evaluate_input_sizes.sh  extend_test_set.py  generate_diffusion_dataset.sh  next_steps.md  pytest.ini  requirements.txt  requirements_spatial.txt  run_memory_optimized.sh  setup.py  spatial_requirements.txt  status_report.md
config/: class_weights.json  config.py  diffusion_balance_config.json  logging.conf  pizza_rl_training_config.json  requirements.txt  validation_report.json
data/: class_definitions.json
deployment/: Dockerfile.prod  deploy.sh  docker-compose.prod.yml  grafana-dashboards.yml  prometheus.yml  rollback.sh
docs/: DEPLOYMENT_PIPELINE_DOCUMENTATION.md  DIFFUSION_DATA_GENERATION.md  EMU01_FRAMEBUILDER_CORRECTION.md  ENERGIE-3.1_Implementation.md  ci_cd_pipeline.md  (+32 more)
firmware/: CMakeLists.txt  pizza_verifier_example.c  pizza_verifier_inference.c  rp2040_deployment_report.json
firmware/src/: selftest.c  selftest.h
(+1051 files in other folders)
